Update HelloDataTypesBoolean.java